fix: fix #button tertiary icon position to be top aligned (except when used in table header)

--- a/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
@@ -164,6 +164,15 @@
       }
     }
 
+    .dnb-button__icon {
+      align-self: flex-start;
+      margin-top: 0.75rem;
+      
+      &.dnb-icon--medium {
+        margin-top: 0.5rem;
+      }
+    }
+
     &.dnb-button--has-icon {
       &.dnb-button--has-text {
         &.dnb-button--icon-position-left {
